# siqlah

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/siqlah/: main.go  migrate.go
cmd/verifier/: main.go  main_test.go
cmd/witness/: main.go  main_test.go
deployments/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: api.md  architecture.md  attestation.md  docker.md  gemini-diagram-prompt.md  interop.md  migration-v0.1-to-v0.2.md  quickstart.md  receipt-spec.md  test-simulation-report.md  witness-interop.md  witness-protocol.md
internal/anchor/: rekor.go  rekor_test.go  scheduler.go
internal/api/: api_test.go  attestation.go  checkpoint.go  energy.go  health.go  ingest.go  proof.go  server.go  witness.go  x402_handlers.go
internal/attestation/: attestation_test.go  provenance.go  statement.go
internal/checkpoint/: builder.go  checkpoint_test.go  cosign.go  payload.go  verify.go
internal/config/: config.go
internal/energy/: carbon.go  energy_test.go  estimator.go
internal/merkle/: consistency.go  merkle.go  merkle_test.go  proof.go  util.go
internal/model/: model_test.go  registry.go  verifier.go
internal/monitor/: alert.go  monitor.go  monitor_test.go
test/: bench_tessera_test.go  bench_test.go  compat_test.go  discrepancy_test.go  e2e_test.go  e2e_v2_test.go  fuzz_test.go  proof_test.go  simulation_test.go  stress_test.go
tokenizer-rs/: Cargo.toml
tokenizer-rs/src/: ffi.rs  lib.rs  merkle.rs
tokenizer-rs/tests/: integration.rs
(+43 files in other folders)
