[package]
name = "siqlah-tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "siqlah_tokenizer"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
libc = "0.2"
